# Nemesis

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: review.md
.claude/hooks/: ruff_on_edit.py
.claude/skills/add-command/: SKILL.md
.claude/skills/add-riot-endpoint/: SKILL.md
.claude/skills/check/: SKILL.md
desktop/: README.md  app.py  build.py  serve_demo.py
desktop/web/: app.js  index.html  style.css
nemesis/: __init__.py  __main__.py  bot.py  config.py  gifs.py  riot.py  stats.py  statsweb.py  trashtalk.py
